# lunar

./: .gitignore  README.md  checkpoint.pth  dql_2048.pth  dql_2048_cuda_2e12.pth  g2048.pth  logs.csv  logs1.csv  logs_0.csv  logs_10000.csv  logs_20000.csv  logs_30000.csv  logs_40000.csv  logs_50000.csv  logs_60000.csv  logs_70000.csv  logs_80000.csv  logs_large0.csv  lunar.pth  lunar1.pth  lunar_00.pth  lunar_01.pth  lunar_large.pth  pyproject.toml  result.json  run.py  tiles_0.json  tiles_10000.json  tiles_30000.json  tiles_50000.json  tiles_70000.json  tiles_80000.json
lunar/: __init__.py  agent.py  config.py  dqns.py  helpers.py  lunar.py  main.py  training.py  vis.py
lunar/agents/: a2084.py  base_dql.py  dqa.py  lunar_dql.py  mc.py  qla.py
lunar/envs/: g2048_env.py
lunar/g2048/: agent.py  dqn.py  env.py  main.py  state.py
lunar/utils/: state.py  tracker.py  training.py  vis.py
models/: lunar_bs512.pth  lunar_small_g99.pth
results/: epsilons.csv  lunar_env32_bs512.pth  total_length.csv  total_rewards.csv
rla2048/: __init__.py  agent.py  config.py  dqn.py  env.py  helpers.py  main.py  play.py  schemas.py  training.py  vis.py
rla2048/agents/: dqn_agent.py  learner.py  orchestrator.py  schopenhauer.py
rla2048/core/: state.py
rla2048/envs/: __init__.py  env2048.py  grid_world.py
rla2048/fts/: __init__.py  heuristics.py  merge.py
rla2048/nn/: dqn.py
rla2048/wrappers/: __init__.py
tests/: test_merge.py
