[tool.poetry]
name = "lunar"
version = "0.1.0"
description = ""
authors = ["Noe Javet <np.javet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
gymnasium = {extras = ["box2d"], version = "^1.0.0"}
stable-baselines3 = "^2.4.1"
pydantic = "^2.10.5"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = "lunar.main:train_small_agent"
eval = "lunar.utils.training:evaluate_policy"

