[tool.poetry]
name = "lunar"
version = "0.1.0"
description = ""
authors = ["Noe Javet <np.javet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
gymnasium = {extras = ["other"], version = "^1.0.0"}
stable-baselines3 = "^2.4.1"
pydantic = "^2.10.5"
opencv-python = "^4.10.0.84"
rich = "^13.9.4"
pandas = "^2.2.3"
ipython = "^8.31.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = "lunar.main:train_small_agent"
eval = "lunar.training:evaluate_policy"
t0 = "lunar.main:train_2048_agent"
main = "lunar.main:main"

