[tool.poetry]
name = "lunar"
version = "0.1.0"
description = ""
authors = ["Noe Javet <np.javet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
gymnasium = {extras = ["all"], version = "^1.0.0"}
stable-baselines3 = "^2.4.1"
torch = "^2.5.1"
pydantic = "^2.10.5"
pandas = "^2.2.3"
ipython = "^8.31.0"
pygame = "^2.6.1"
opencv-python = "^4.10.0.84"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
rich = "^13.9.4"
selenium = "^4.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = "lunar.main:main"
eval = "lunar.main:evaluation"
plot = "lunar.vis:plot_training_results"
t0 = "lunar.main:train_2048_agent"
video = "lunar.main:create_video"

